<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#234564"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:visibility="visible"
        android:layout_marginRight="25dp"
        tools:ignore="RtlHardcoded">
        <TextView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="MENU"
            android:textColor="#de070a"
            android:textStyle="bold"
            android:textSize="38sp"
            android:layout_gravity="bottom"
            android:gravity="end"
            android:layout_marginTop="25dp"
            android:textAllCaps="true"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_marginTop="35dp"
        android:layout_marginRight="15dp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/about_us"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/vision"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/our_vision"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/contact_us"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/doctor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/admin_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/patient"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/patient_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/gall"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginRight="15dp"
        android:layout_weight=".1"
        android:gravity="right"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/homepage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:gravity="end"
            android:text="@string/back_to_home_page"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        tools:ignore="UselessLeaf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:layout_gravity="center"
        android:gravity="center"
        android:foregroundGravity="center"
        >
        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/terms_and_conditions"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>