<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/layout_about_1"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:gravity="bottom"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Contact"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:textSize="26sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:padding="5dp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".30"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights,UselessLeaf" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="match_parent"
            android:background="@drawable/layout_contact"
            >

            <TextView
                android:id="@+id/enquiry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/enquiry"
                android:textSize="32sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="true" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".30"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights,UselessLeaf" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:background="@drawable/layout_contact"
            >

            <TextView
                android:id="@+id/emergency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/emergency"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="true" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".18"
        tools:ignore="UselessLeaf"/>



    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="@drawable/layout_bg_menu"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <TextView
            android:id="@+id/book"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:text="@string/book"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_weight=".18"
            android:layout_height="match_parent"
            android:text="@string/about"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:text="@string/city"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="#723a47"
            android:background="@drawable/layout_menu_center"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />


        <TextView
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_weight=".22"
            android:layout_height="match_parent"
            android:text="@string/contact"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="match_parent"
            android:text="@string/more"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>