<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#f7f4f5"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:background="@drawable/layout_admin_login"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Admin"
            android:textSize="50sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="casual"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            tools:ignore="UselessLeaf"></LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".14"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            >
            <EditText
                android:id="@+id/username1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#ffffff"
                android:hint="@string/user"
                android:inputType="text"
                android:padding="5dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".14"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            >
            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#ffffff"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight=".25">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/Kedia"
                android:textColor="@color/white"
                android:textSize="@dimen/login_text_size"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>